force-app/main/default/objects/CLM_Slide_Metric__c/CLM_Slide_Metric__c.object-meta.xml
<CustomObject>
    <label>CLM Slide Metric</label>
    <nameField>
        <displayFormat>CLMM-{00000}</displayFormat>
        <label>Metric Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CLM Slide Metrics</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>