force-app/main/default/objects/CLM_Slide_Metric__c/fields/CLM_Presentation_Session__c.field-meta.xml
<CustomField>
    <fullName>CLM_Presentation_Session__c</fullName>
    <label>CLM Presentation Session</label>
    <referenceTo>CLM_Presentation_Session__c</referenceTo>
    <relationshipLabel>CLM Slide Metrics</relationshipLabel>
    <relationshipName>CLM_Slide_Metrics</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>