force-app/main/default/objects/CLM_Slide_Metric__c/fields/CLM_Sequence__c.field-meta.xml
<CustomField>
    <fullName>CLM_Sequence__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CLM Sequence</label>
    <referenceTo>CLM_Sequence__c</referenceTo>
    <relationshipLabel>CLM Slide Metrics</relationshipLabel>
    <relationshipName>CLM_Slide_Metrics</relationshipName>
    <type>Lookup</type>
</CustomField>