force-app/main/default/objects/CLM_Slide_Metric__c/fields/Dwell_Time_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Dwell_Time_Seconds__c</fullName>
    <label>Dwell Time Seconds</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>