force-app/main/default/objects/CLM_Slide_Metric__c/fields/First_Viewed_At__c.field-meta.xml
<CustomField>
    <fullName>First_Viewed_At__c</fullName>
    <label>First Viewed At</label>
    <type>DateTime</type>
</CustomField>