force-app/main/default/objects/CLM_Slide_Metric__c/fields/Last_Viewed_At__c.field-meta.xml
<CustomField>
    <fullName>Last_Viewed_At__c</fullName>
    <label>Last Viewed At</label>
    <type>DateTime</type>
</CustomField>