force-app/main/default/objects/CLM_Slide_Metric__c/fields/Was_Presented__c.field-meta.xml
<CustomField>
    <fullName>Was_Presented__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Was Presented</label>
    <type>Checkbox</type>
</CustomField>